# Ratatoskr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config_sample.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
ratatoskr/: main.py  models.py
ratatoskr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ratatoskr/routers/: ingest.py  query.py
ratatoskr/utils/: config.py  dependencies.py  elasticsearch_integration.py  llm_handler.py  logging.py  query_handler.py  query_processor.py  rag_processor.py
src/: config_utils.py  elasticsearch_integration.py  llm_handler.py  logging_config.py  main.py  query_handler.py  rag_processor.py
src/static/css/: styles copy.css  styles.css
src/static/js/: ratatoskr.js
src/templates/: index.html
